@@ -1097,3 +1097,15 @@ History:
 - 28 Aug 2014 M.Fuerstenau version 0.9.20a
   - datastore_volumes_info().
     - Fixed some small bugs in output.
+
+- 7 Oct 2014 M.Fuerstenau version 0.9.21
+  - host_runtime_info()
+    - If the CIM server is not running (or not running correctly) the health
+      check receives a lot of unknown events even in the case the hardware
+      status from the GUI looks ok. So we check for the first CPU. If it is
+      unknown be sure the CIM server has to be restarted. After this you will
+      notice a difference in the GUI too.
+  - host_net_info()
+    - In case of an unplugged/disconnected NIC the state is now warning
+      instead of critical because an unplugged card is not always a critical
+      situtation but the admin should take notice of that.
